@startuml

title __CONFIG's Class Diagram__\n

  package com.inspiware.price.aggregator {
    package com.inspiware.price.aggregator.config {
      class ApplicationProperties {
          - dataStoreType : String
          - feedTopics : String
          - consumerTopic : String
          + getDataStoreType()
          + setDataStoreType()
          + getFeedTopics()
          + setFeedTopics()
          + getConsumerTopic()
          + setConsumerTopic()
          + getCache()
          + setCache()
      }
    }
  }
  

  package com.inspiware.price.aggregator {
    package com.inspiware.price.aggregator.config {
      class Cache {
          + getEhcache()
          + setEhcache()
      }
    }
  }
  

  package com.inspiware.price.aggregator {
    package com.inspiware.price.aggregator.config {
      class Ehcache {
          - timeToLiveDays : int
          - maxEntries : long
          + Ehcache()
          + getTimeToLiveDays()
          + setTimeToLiveSeconds()
          + getMaxEntries()
          + setMaxEntries()
      }
    }
  }
  

  package com.inspiware.price.aggregator {
    package com.inspiware.price.aggregator.config {
      class CacheConfiguration {
          - jcacheConfiguration : Configuration<Object, HashSet>
          + CacheConfiguration()
          + cacheManagerCustomizer()
      }
    }
  }
  

  package com.inspiware.price.aggregator {
    package com.inspiware.price.aggregator.config {
      class DataStoreConfiguration {
          - log : Logger
          + DataStoreConfiguration()
          + instrumentPriceMapStore()
      }
    }
  }
  

  package com.inspiware.price.aggregator {
    package com.inspiware.price.aggregator.config {
      class DefaultProfileUtil {
          {static} - SPRING_PROFILE_DEFAULT : String
          - DefaultProfileUtil()
          {static} + addDefaultProfile()
          {static} + getActiveProfiles()
      }
    }
  }
  

  package com.inspiware.price.aggregator {
    package com.inspiware.price.aggregator.config {
      class JmsConfiguration {
          - jmsConnectionFactory : ConnectionFactory
          + containerFactory()
          + messageConverter()
          + errorHandlingFlow()
          + redeliveryLatch()
          + vendor1IntegrationFlow()
          + vendor2IntegrationFlow()
          + vendor3IntegrationFlow()
      }
    }
  }
  

  ApplicationProperties o-- Cache : cache
  ApplicationProperties +-down- Cache
  Cache o-- Ehcache : ehcache
  Cache +-down- Ehcache
  DataStoreConfiguration o-- ApplicationProperties : properties
  JmsConfiguration o-- PriceAggregatorService : priceAggregatorService


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
